test image super resolution on remote pc

--- a/app/templates/timeline_bs.html
+++ b/app/templates/timeline_bs.html
@@ -69,12 +69,12 @@
                         <button class="btn btn-default pull-right" id="id-button-addtweet">
                     <span class="glyphicon glyphicon-send" aria-hidden="true">
                     </span>
-                            发送
+                            转高清
                         </button>
                         <button class="btn btn-default pull-left" id="id-button-addpicture">
                     <span class="glyphicon glyphicon-picture" aria-hidden="true">
                     </span>
-                            图片
+                            上传图片
                         </button>
                         {% endif %}
                         <div id="id-div-picturearea"></div>
@@ -83,7 +83,7 @@
                     {% if host.username == visitor.username %}
                     <div class="upload-wrapper tweetbox" style="display: none;">
                         <input id="id-input-picture" multiple type="file">
-                        <button class="btn btn-default btn-xs" id="id-button-upload-picture">添加图片</button>
+                        <button class="btn btn-default btn-xs" id="id-button-upload-picture">开始上传</button>
                     </div>
                     {% endif %}
 
