--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,7 +16,7 @@
 <div class="gua-container">
     <div class="gua-main">
         <div class="gua-header">
-            <h1 class="gua-title">HDpicture</h1>
+            <h1 class="gua-title">better picture</h1>
         </div>
         <div class="gua-form transbox">
             <div class="gua-tab">
