--- a/app/templates/timeline_bs.html
+++ b/app/templates/timeline_bs.html
@@ -44,7 +44,7 @@
             <a class="blog-nav-item glyphicon glyphicon-home" id="id-a-mypage"
                href="/timeline/{{visitor.username}}"></a>
             <a class="blog-nav-item" id="id-a-mytweets" href="#">个人主页</a>
-            <a class="blog-nav-item" id="id-a-followedtweets" href="#">关注人微博</a>
+            <a class="blog-nav-item" id="id-a-followedtweets" href="#">广场</a>
             <a class="blog-nav-item" id="id-a-notifications" href="#">通知</a>
             <a class="blog-nav-item" href="/signout">退出</a>
         </nav>
