--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -20,38 +20,38 @@
         </div>
         <div class="gua-form transbox">
             <div class="gua-tab">
-                <a id="id-a-signup" href="#">注册</a>
-                <a id="id-a-login" href="#">登录</a>
+                <a id="id-a-signup" href="#">Sign up</a>
+                <a id="id-a-login" href="#">Sign in</a>
             </div>
             <div id="id-div-signup">
                 <div class="gua-form-textinput">
                     <div class="gua-input-wrapper">
-                        <input id="id-input-username" type="text" placeholder="用户名" required/>
+                        <input id="id-input-username" type="text" placeholder="Pick a username" required/>
                     </div>
                     <div class="gua-input-wrapper">
-                        <input id="id-input-password" type="text" placeholder="密码" required/>
+                        <input id="id-input-password" type="text" placeholder="Password" required/>
                     </div>
                 </div>
-                <button id="id-button-register" class="gua-button-big">注册</button>
+                <button id="id-button-register" class="gua-button-big">Create an account</button>
             </div>
             <div id="id-div-login">
                 <div class="gua-form-textinput">
                     <div class="gua-input-wrapper">
-                        <input id="id-input-login-username" type="text" placeholder="用户名" required/>
+                        <input id="id-input-login-username" type="text" placeholder="Username" required/>
                     </div>
                     <div class="gua-input-wrapper">
-                        <input id="id-input-login-password" type="text" placeholder="密码" required/>
+                        <input id="id-input-login-password" type="text" placeholder="Password" required/>
                     </div>
                 </div>
-                <button id="id-button-login" class="gua-button-big" type="submit">进入</button>
+                <button id="id-button-login" class="gua-button-big" type="submit">Sign in</button>
                 <div class="gua-remember float-left">
                     <!-- <label><input id="gua-id-remember" type="checkbox" name="remember" />记住我</label> -->
                 </div>
             </div>
             <button class="btn btn-default" id="id-button-testuser">
-                          <span class="glyphicon glyphicon-eye-open">
+                          <span class="glyphicon glyphicon-road">
                           </span>
-                访客直接登录
+                fuck the account
             </button>
         </div>
 
