adjust web page title size

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -15,7 +15,7 @@
 <body>
 <div class="gua-container">
     <div class="gua-main">
-        <div class="gua-header">
+        <div class="hero-header">
             <h1 class="gua-title">make old photo better</h1>
         </div>
         <div class="gua-form transbox">
