adjust text of web page

--- a/app/templates/timeline_bs.html
+++ b/app/templates/timeline_bs.html
@@ -69,7 +69,7 @@
                         <button class="btn btn-default pull-right" id="id-button-addtweet">
                     <span class="glyphicon glyphicon-send" aria-hidden="true">
                     </span>
-                            convert
+                            transfer
                         </button>
                         <button class="btn btn-default pull-left" id="id-button-addpicture">
                     <span class="glyphicon glyphicon-picture" aria-hidden="true">
@@ -142,7 +142,7 @@
 
             {% if host.username == visitor.username %}
             <div class="file-wrapper tweetbox" style="display: none;">
-                <p class="text-center font-bold">change profile photo</p>
+                <p class="text-center font-bold">change your profile photo</p>
                 <hr/>
                 <input id="id-input-file" type="file">
                 <button class="btn btn-default btn-xs" id="id-button-upload-avatar">submit</button>
