adjust webpage glyphicon

--- a/app/templates/timeline_bs.html
+++ b/app/templates/timeline_bs.html
@@ -67,7 +67,7 @@
                         <textarea name="content" id="id-text-content" class="form-control"
                                   placeholder="tag the photo"></textarea>
                         <button class="btn btn-default pull-right" id="id-button-addtweet">
-                    <span class="glyphicon glyphicon-send" aria-hidden="true">
+                    <span class="glyphicon glyphicon-transfer" aria-hidden="true">
                     </span>
                             transfer
                         </button>
