test image super resolution performance of CNN model with instance normalization

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -51,7 +51,7 @@
             <button class="btn btn-default" id="id-button-testuser">
                           <span class="glyphicon glyphicon-road">
                           </span>
-                fuck the account
+                fuck the sign up
             </button>
         </div>
 
